# dat300

./: .gitignore  flake.nix  pyproject.toml
CA1_DAT300/: ca1_dat300_2025.ipynb  main.py
CA2_DAT300/: CA2_CNN_Template.ipynb  utilities.py
CA3_DAT300/: DAT300_CA03_template.ipynb  utilities.py
CA4_DAT300/: CA4.ipynb
