[project]
name = "ca1-dat300"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pykernel>=0.1.6",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]
